added some shit

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </html>
 
 <script src="Global.js"></script>
+<script src="Colors.js"></script>
+<script src="Terrains.js"></script>
 <script src="Object.js"></script>
 <script src="Actor.js"></script>
 <script src="Player.js"></script>
